feat: overlay window

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>CANWIN</title>
-    <link rel="stylesheet" href="index.css"/>
-	<script defer src="script.js"></script>
-  </head>
-  <body>
-  </body>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Percentage Display</title>
+	<style>
+		.canvas {
+			background-color: #f0f0f0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-family: Arial, sans-serif;
+			font-size: 48px;
+			color: #333;
+			border-radius: 10px;
+			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+		}
+	</style>
+</head>
+
+<body>
+	<div class="canvas">70%</div>
+</body>
+
 </html>
