feat: beta app with api prediction

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,24 +4,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Percentage Display</title>
-	<style>
-		.canvas {
-			background-color: #f0f0f0;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-family: Arial, sans-serif;
-			font-size: 48px;
-			color: #333;
-			border-radius: 10px;
-			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-		}
-	</style>
+	<title>Electron App</title>
 </head>
+<style>
+	div {
+		width: 128px;
+		height: 128px;
+		background-color: #f0f0f0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-family: Arial, sans-serif;
+		font-size: 48px;
+		color: #333;
+		border-radius: 10px;
+		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+	}
+</style>
 
 <body>
-	<div class="canvas">70%</div>
+	<div id="percentage">Hey</div>
 </body>
 
 </html>
