feat: alt tab app

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -5,25 +5,28 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Electron App</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-<style>
-	div {
-		width: 80px;
-		height: 50px;
-		background-color: #f0f0f0;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-family: Arial, sans-serif;
-		font-size: 24px;
-		color: #333;
-		border-radius: 10px;
-		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-	}
-</style>
-
 <body>
-	<div id="percentage">Hey</div>
+	<div class="blue-team">
+		<div class="player">
+			<img src="res/none.jpg" alt="">
+		</div>
+		<div class="player">
+			<img src="res/none.jpg" alt="">
+		</div>
+		<div class="player">
+			<img src="res/none.jpg" alt="">
+		</div>
+		<div class="player">
+			<img src="res/none.jpg" alt="">
+		</div>
+		<div class="player">
+			<img src="res/none.jpg" alt="">
+		</div>
+	</div>
+	<div class="center"></div>
+	<div class="red-team"></div>
 </body>
 
 </html>
