--- a/app/src/index.html
+++ b/app/src/index.html
@@ -8,25 +8,6 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="blue-team">
-		<div class="player">
-			<img src="res/none.jpg" alt="">
-		</div>
-		<div class="player">
-			<img src="res/none.jpg" alt="">
-		</div>
-		<div class="player">
-			<img src="res/none.jpg" alt="">
-		</div>
-		<div class="player">
-			<img src="res/none.jpg" alt="">
-		</div>
-		<div class="player">
-			<img src="res/none.jpg" alt="">
-		</div>
-	</div>
-	<div class="center"></div>
-	<div class="red-team"></div>
+	<p id="win-percentage-display">100%</p>
 </body>
-
 </html>
